# toggl-work-reports

./: README.md  pyproject.toml
toggl_work_reports/: report.py
